[package]
name = "cairo_compiler_fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
thiserror = { version = "1.0.40" }
rand = { version = "0.8.5"}
